--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,11 +2,7 @@
 nixPkgs = ["python311"]
 
 [phases.install]
-cmds = [
-    "curl -LsSf https://astral.sh/uv/install.sh | sh",
-    "export PATH=\"$HOME/.cargo/bin:$PATH\"",
-    "uv pip install -r requirements.txt --system"
-]
+cmds = ["pip install -r requirements.txt"]
 
 [start]
 cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
