--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,10 @@ nixPkgs = [
 ]
 
 [phases.install]
-cmds = ["python -m pip install -r requirements.txt"]
+cmds = [
+  "python -m pip install --upgrade pip",
+  "python -m pip install -r requirements.txt"
+]
 
 [start]
 cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
